# LoxLM

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  DICOM - BIDs Converter.pptx  README.md  _version.py  custom_selector.py  docker-compose.yml  examples.json  examples_0-450.json  examples_all.json  examples_clean.json  examples_test.json  letsdoit.ipynb  pyproject.toml  rag.py  rag_input.py  requirements.txt
.github/workflows/: system_test.yml  test.yml
openneuro_extracts/: descriptions_0_25.json  descriptions_100_200.json  descriptions_25_100.json
src/: dicom.ipynb  example_loxlm.py  loxlm.py  model_context.py  model_local.py  model_local_context.py  model_openai.py  model_openai_context.py  rag_input.py
src/loxlm/: _version.py  context_retriever.py  rag_input.py
src/loxlm/utils/: bids_split.py  example_loader.py  extract_cleaner.py  multi_example_selector.py  openneuro_extractor.py  pdf_split.py
src/test/: context_retriever.py
src/tests/: context.py  context_retriever.py  test_custom_selector.py
src/utils/: bids_split.py  dicom_loader.py  embedding_evaluator.ipynb  example_loader.py  examples.json  examples_simple.json  extract_cleaner.ipynb  extract_cleaner.py  multi_example_selector.py  openneuro_extractor.py  pdf_split.py  prompt_logger.py
test/: custom_selector.py  test_context_retriever.py
utils/: bids_split.py  openneuro_extractor.py
volumes/etcd/member/snap/: db
volumes/milvus/rdb_data/: IDENTITY  LOG
volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
volumes/minio/.minio.sys/: format.json
volumes/minio/a-bucket/files/insert_log/450102668435391861/450102668435391862/450102668435591898/105/450102668436594997/473426e9-7167-4547-b010-13f293982888/: part.1
volumes/minio/a-bucket/files/insert_log/450102668435391861/450102668435391862/450102668435591898/105/450102668436595008/bfc59368-0658-4184-b10b-fe500bb6bd09/: part.1
