[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [{name = "James Randolph", email = "jarandolph77@gmail.com"}]
dependencies = ["langchain", "langchain_core", "langchain_community" , "langchain_milvus", "sentence-transformers"]
description = "LLM based DICOM to BIDS conversion aid."
dynamic = ["version"]
license = {file = "LICENSE.txt"}
name = "loxlm"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-argparse",
    "sphinx-copybutton",
    "sphinx_rtd_theme",
    "myst-parser",
    "rstcheck"
]
# For running unit and docstring tests
test = [
    "coverage",
    "pytest>=6.0.0",
    "pytest-cov"
]

[tool.black]
line-length = 100

[tool.codespell]
skip = "./.git,.mypy_cache,env,venv,tests,*bval,*bvec"


[tool.hatch.build.hooks.vcs]
version-file = "src/loxlm/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/loxlm"]


[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
addopts = "-ra -vv"

[tool.isort]
combine_as_imports = true
line_length = 79
profile = "black"
skip_gitignore = true
